spec/lib/code/errors/messages/modulePropertiesError.js
// Generated by CoffeeScript 1.12.6
(function() {
  'use strict';
  module.exports = function(dd) {
    return dd.drive({
      it: "returns 'modulePropertiesError' message for given params",
      i: ['title', 'name', ['x', 'x', 'path'], 'key'],
      e: {
        title: "Could not reach method 'name' in 'title'",
        messages: ["Trod to 'x.x.path', no 'key' there."]
      }
    });
  };

}).call(this);
